# RegistrationUDT

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  VariationalRegistrationMainDT.cxx  itkVariationalRegistrationIncludeRequiredIOFactories.h
include/: itkVariationalRegistrationDTSSDFunction.h  itkVariationalRegistrationDTSSDFunction.hxx
